Update 'vrcbdfm1a-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:a250cdb655e6767b55423d8524b0b535012a95d1@sha256:26dec4a12f0a141ce7f4fa62eef08cdb0e847b3daef4fee5bac65797258d69bd

--- a/components/vrcbdfm1a-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/vrcbdfm1a-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: vrcbdfm1a-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:a250cdb655e6767b55423d8524b0b535012a95d1@sha256:26dec4a12f0a141ce7f4fa62eef08cdb0e847b3daef4fee5bac65797258d69bd
+          name: container-image
